input/files/examples/errors/JavaExampleError001.java
package errors;

public class JavaExampleError001 {
	method() public { // public stmt declared after method declaration.
		
	}
}